turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:2: error: Missing closing brace `}' assumed here
val stop = 0
^Turmite:3: error: expected class or object definition
val pasdevirage = 1
^Turmite:4: error: expected class or object definition
val gauche = 2
^Turmite:5: error: expected class or object definition
val demitour = 4
^Turmite:6: error: expected class or object definition
val droite = 8 
^Turmite:8: error: expected class or object definition
var state = 0
^Turmite:10: error: expected class or object definition
def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
^